--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -174,16 +174,23 @@ button {
 	cursor: pointer;
 }
 
-.Btn {
+.GenerateBtn {
 	position: absolute;
-		bottom: 20px;
+		bottom: 2px;
 	
 	background: none;
 	border: none;
 	cursor: pointer;
 }
 
-
+.ClearBtn {
+	position: absolute;
+		bottom: 5px;
+	
+	background: none;
+	border: none;
+	cursor: pointer;
+}
 
 .detailBtn img,.addBtn img {
 	
