--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -190,6 +190,21 @@ button {
 	cursor: pointer;
 }
 
+.textbox {
+	height: 1.2em;
+	font-size: 1em;
+	resize: none;
+	width: 100%;
+	border: none;
+	background-color: transparent;
+	color: #fff;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light",
+		"Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	font-size: .9em;
+	padding:8px;
+}
+
+
 .detailBtn img,.addBtn img {
 	
 }
